[package]
name = "multi-chess"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6.8", features = ["codec"] }
futures = { version = " 0.3.17" }
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "0.15.5"
