[package]
name = "multi-chess"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12"
actix-rt = "2.3.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6.8", features = ["codec"] }
futures = { version = " 0.3.17" }
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "0.15.5"
nom = "7"
byteorder = "1"
thiserror = "1.0"
env_logger = "0.9"
log = "0.4"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
